--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
     sdk: flutter
   flutter_screenutil: ^5.9.1
   flutter_svg: ^2.0.10+1
+  font_awesome_flutter: ^10.7.0
   get: ^4.6.6
 
 dev_dependencies:
