--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   flutter_screenutil: ^5.9.1
   flutter_svg: ^2.0.10+1
   font_awesome_flutter: ^10.7.0
-  get: ^4.6.6
+
+  go_router: ^14.2.3
   google_fonts: ^6.2.1
 
 dev_dependencies:
